<?xml version="1.0"?>
<package>
  <name>jedgar_description</name>
  <version>0.0.0</version>
  <description>The jedgar_description package</description>

  <maintainer email="zach.inbox@gmail.com">Zach Anderson</maintainer>
  <author email="zach.inbox@gmail.com">Zach Anderson</author>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>xacro</build_depend>

  <export></export>
</package>

