<?xml version="1.0"?>
<package>
  <name>jedgar_launch</name>
  <version>0.0.0</version>
  <description>The jedgar_launch package</description>

  <maintainer email="zach.inbox@gmail.com">Zach Anderson</maintainer>
  <author email="zach.inbox@gmail.com">Zach Anderson</author>
  
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>robot_state_publisher</run_depend>

  <export></export>
</package>

